--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -107,7 +108,7 @@
             <Font name="JasmineUPC" size="36.0" />
          </font>
       </Label>
-      <ImageView fitHeight="459.0" fitWidth="299.0" layoutX="39.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="bookImg" fitHeight="459.0" fitWidth="299.0" layoutX="39.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="371.0" layoutY="157.0" text="ชื่อหนังสือ" textFill="#f99f28">
          <font>
             <Font name="JasmineUPC" size="28.0" />
@@ -144,63 +145,67 @@
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="402.0" layoutY="345.0" text="ประเภท :">
+      <Label layoutX="400.0" layoutY="405.0" text="ประเภท :">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="402.0" layoutY="380.0" text="ISBN :">
+      <Label layoutX="400.0" layoutY="344.0" text="ISBN :">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="402.0" layoutY="414.0" text="หน้า :">
+      <Label layoutX="400.0" layoutY="374.0" text="หน้า :">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="403.0" layoutY="479.0" text="สำนักพิมพิ์ :">
+      <Label layoutX="400.0" layoutY="475.0" text="สำนักพิมพ์ :">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label layoutX="404.0" layoutY="512.0" text="ผู้แต่ง :">
+      <Label layoutX="400.0" layoutY="440.0" text="ผู้แต่ง :">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Line endX="519.1333618164062" endY="3.0517578125E-5" layoutX="470.0" layoutY="554.0" startX="-98.46664428710938" startY="3.0517578125E-5" stroke="#bc986a" />
-      <Label layoutX="370.0" layoutY="572.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
+      <Line endX="519.1333618164062" endY="3.0517578125E-5" layoutX="469.0" layoutY="520.0" startX="-98.46664428710938" startY="3.0517578125E-5" stroke="#bc986a" />
+      <Label layoutX="366.0" layoutY="538.0" text="เนื้อเรื่องย่อ" textFill="#f99f28">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookDetail" layoutX="405.0" layoutY="604.0" text="bookDetail">
+      <VBox layoutX="407.0" layoutY="572.0" maxWidth="579.0" prefWidth="579.0">
+         <children>
+            <Label fx:id="bookDetail" lineSpacing="10.0" maxWidth="579.0" prefWidth="86.0" text="bookDetail" wrapText="true">
+               <font>
+                  <Font name="JasmineUPC" size="28.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <Label fx:id="bookType" layoutX="519.0" layoutY="405.0" text="bookType">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookType" layoutX="520.0" layoutY="345.0" text="bookType">
+      <Label fx:id="bookISBN" layoutX="519.0" layoutY="344.0" text="bookISBN">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookISBN" layoutX="520.0" layoutY="380.0" text="bookISBN">
+      <Label fx:id="bookPage" layoutX="519.0" layoutY="374.0" text="bookPage">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookPage" layoutX="520.0" layoutY="414.0" text="bookPage">
+      <Label fx:id="bookPublisher" layoutX="519.0" layoutY="475.0" text="bookPublisher">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="bookPublisher" layoutX="522.0" layoutY="479.0" text="bookPublisher">
-         <font>
-            <Font name="JasmineUPC" size="28.0" />
-         </font>
-      </Label>
-      <Label fx:id="bookAuthor" layoutX="522.0" layoutY="512.0" text="bookAuthor">
+      <Label fx:id="bookAuthor" layoutX="519.0" layoutY="440.0" text="bookAuthor">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
