--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -37,14 +38,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
-                                    <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
-                                    <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
-                                    <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
-                                    <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
-                                 </items>
+                              <MenuButton fx:id="bookTypeMenuItem" mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
@@ -60,7 +54,7 @@
                                     <Insets left="30.0" right="-20.0" top="13.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false"  prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
+                              <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
@@ -106,73 +100,79 @@
                            </children>
                         </HBox>
                      </children></HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="1024.0">
-                     <children>
-                        <Text fill="#a05e07" strokeType="OUTSIDE" strokeWidth="0.0" text="ประเภทของหนังสือ">
-                           <HBox.margin>
-                              <Insets left="20.0" top="20.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="JasmineUPC" size="30.0" />
-                           </font>
-                        </Text>
-                        <Text fill="#b09f9f" strokeType="OUTSIDE" strokeWidth="0.0" text="|">
-                           <font>
-                              <Font name="JasmineUPC Bold" size="36.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="5.0" top="20.0" />
-                           </HBox.margin>
-                        </Text>
-                        <Label fx:id="bookType" text="bookType" textFill="#b09f9f">
-                           <HBox.margin>
-                              <Insets left="5.0" top="20.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="JasmineUPC" size="24.0" />
-                           </font>
-                        </Label>
-                        <HBox prefHeight="42.0" prefWidth="122.0" />
-                        <HBox prefHeight="100.0" prefWidth="200.0" />
-                        <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
-                           <font>
-                              <Font name="JasmineUPC" size="20.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="30.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
-                           <font>
-                              <Font name="JasmineUPC" size="20.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="30.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
+                  <GridPane>
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
-                  </HBox>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="684.7999847412109" minWidth="10.0" prefWidth="684.7999847412109" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="969.1999816894531" minWidth="10.0" prefWidth="340.00001525878906" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="1024.0">
+                           <children>
+                              <Text fill="#a05e07" strokeType="OUTSIDE" strokeWidth="0.0" text="ประเภทของหนังสือ">
+                                 <HBox.margin>
+                                    <Insets left="50.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="30.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="#b09f9f" strokeType="OUTSIDE" strokeWidth="0.0" text="|">
+                                 <font>
+                                    <Font name="JasmineUPC Bold" size="36.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="5.0" top="20.0" />
+                                 </HBox.margin>
+                              </Text>
+                              <Label fx:id="bookType" text="bookType" textFill="#b09f9f">
+                                 <HBox.margin>
+                                    <Insets left="5.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </HBox>
+                        <HBox spacing="20.0" GridPane.columnIndex="1">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                                 <font>
+                                    <Font name="JasmineUPC" size="20.0" />
+                                 </font>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                                 <font>
+                                    <Font name="JasmineUPC" size="20.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </HBox>
+                     </children>
+                  </GridPane>
                </children>
             </VBox>
          </top>
          <center>
-            <ScrollPane prefHeight="669.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="669.0" prefWidth="1024.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="643.0" prefWidth="1024.0">
-                     <children>
-                        <GridPane fx:id="gridBook" prefHeight="0.0" prefWidth="0.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                        </GridPane>
-                     </children>
-                  </AnchorPane>
+                  <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" style="-fx-background-color: #fff;" vgap="10.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </FlowPane>
               </content>
             </ScrollPane>
          </center>
