--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -252,7 +252,7 @@
                         <Font name="JasmineUPC" size="25.0" />
                      </font>
                   </Label>
-                  <Label fx:id="LastnameLabel" layoutX="180.0" layoutY="163.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
+                  <Label fx:id="lastnameLabel" layoutX="180.0" layoutY="163.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
                      <font>
                         <Font name="JasmineUPC" size="25.0" />
                      </font>
