--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -118,9 +118,9 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fx:id="userImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@image/Icon01.png" />
+                                        <Image url="@image/Default.png" />
                                     </image>
                                     <GridPane.margin>
                                         <Insets left="90.0" top="40.0" />
