--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -16,88 +16,6 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
-      <HBox layoutX="33.0" layoutY="17.0" prefHeight="69.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/javapai.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </ImageView>
-            <MenuButton mnemonicParsing="false" prefHeight="36.0" prefWidth="142.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
-               <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิยาย" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือเรียน" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="e-book" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
-               </items>
-               <font>
-                  <Font name="JasmineUPC" size="25.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="40.0" top="15.0" />
-               </HBox.margin>
-            </MenuButton>
-            <Label prefHeight="27.0" prefWidth="95.0" text="ขายดี" textAlignment="CENTER" textFill="#bc986a">
-               <font>
-                  <Font name="JasmineUPC" size="36.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="75.0" top="20.0" />
-               </HBox.margin>
-            </Label>
-            <Label prefHeight="27.0" prefWidth="108.0" text="แนะนำ" textAlignment="CENTER" textFill="#bc986a">
-               <font>
-                  <Font name="JasmineUPC" size="36.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="75.0" top="20.0" />
-               </HBox.margin>
-            </Label>
-            <Button mnemonicParsing="false" prefHeight="37.0" prefWidth="157.0" style="-fx-background-color: F99F28;">
-               <font>
-                  <Font size="15.0" />
-               </font>
-               <graphic>
-                  <Label fx:id="userNameLabel" prefHeight="27.0" prefWidth="100.0" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-               </graphic>
-               <HBox.margin>
-                  <Insets left="40.0" right="40.0" top="15.0" />
-               </HBox.margin>
-            </Button>
-            <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/heart.png" />
-               </image>
-               <HBox.margin>
-                  <Insets top="15.0" />
-               </HBox.margin>
-            </ImageView>
-            <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/basket.png" />
-               </image>
-               <HBox.margin>
-                  <Insets top="15.0" />
-               </HBox.margin>
-            </ImageView>
-            <TextField prefHeight="36.0" prefWidth="159.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: BC986A;">
-               <font>
-                  <Font name="JasmineUPC" size="24.0" />
-               </font>
-               <HBox.margin>
-                  <Insets right="20.0" top="15.0" />
-               </HBox.margin>
-            </TextField>
-         </children></HBox>
       <Label layoutX="18.0" layoutY="91.0" text="ประเภทหนังสือ |" textFill="#a05e07">
          <font>
             <Font name="JasmineUPC" size="36.0" />
@@ -225,5 +143,75 @@
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
+      <HBox fx:id="hBoxSellerStock" layoutX="2.0" prefHeight="69.0" prefWidth="1024.0">
+         <children>
+            <MenuButton mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleMagazineBookButton" text="นิตยสาร" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleNovelBookButton" text="นิยาย" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleEducationalBookButton" text="หนังสือเรียน" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleEBookButton" text="e-book" />
+               </items>
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="40.0" top="13.0" />
+               </HBox.margin>
+            </MenuButton>
+            <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="30.0" right="-20.0" top="13.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
+               <font>
+                  <Font name="JasmineUPC" size="25.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <HBox.margin>
+                  <Insets left="55.0" right="40.0" top="13.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
+               <graphic>
+                  <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/heart.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <HBox.margin>
+                  <Insets top="13.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
+               <graphic>
+                  <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/basket.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <HBox.margin>
+                  <Insets top="13.0" />
+               </HBox.margin>
+            </Button>
+            <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
+               <font>
+                  <Font name="JasmineUPC" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" top="13.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
