--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import javafx.geometry.Insets?>
-        <?import javafx.scene.control.Button?>
-        <?import javafx.scene.control.Label?>
-        <?import javafx.scene.control.MenuButton?>
-        <?import javafx.scene.control.MenuItem?>
-        <?import javafx.scene.control.ScrollPane?>
-        <?import javafx.scene.control.TextArea?>
-        <?import javafx.scene.control.TextField?>
-        <?import javafx.scene.image.Image?>
-        <?import javafx.scene.image.ImageView?>
-        <?import javafx.scene.layout.AnchorPane?>
-        <?import javafx.scene.layout.BorderPane?>
-        <?import javafx.scene.layout.ColumnConstraints?>
-        <?import javafx.scene.layout.GridPane?>
-        <?import javafx.scene.layout.HBox?>
-        <?import javafx.scene.layout.RowConstraints?>
-        <?import javafx.scene.shape.Line?>
-        <?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.ApplySellerController">
    <children>
@@ -34,40 +32,40 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
-                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
-                     </items>
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="40.0" top="13.0" />
-                     </HBox.margin>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" right="-20.0" top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets left="55.0" right="40.0" top="13.0" />
-                     </HBox.margin>
-                  </Button>
+<!--                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">-->
+<!--                     <items>-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />-->
+<!--                     </items>-->
+<!--                     <font>-->
+<!--                        <Font name="JasmineUPC" size="25.0" />-->
+<!--                     </font>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="40.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </MenuButton>-->
+<!--                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">-->
+<!--                     <font>-->
+<!--                        <Font name="JasmineUPC" size="25.0" />-->
+<!--                     </font>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="30.0" right="-20.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </Button>-->
+<!--                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">-->
+<!--                     <font>-->
+<!--                        <Font name="JasmineUPC" size="25.0" />-->
+<!--                     </font>-->
+<!--                     <opaqueInsets>-->
+<!--                        <Insets />-->
+<!--                     </opaqueInsets>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="55.0" right="40.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </Button>-->
                   <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
@@ -173,12 +171,12 @@
                            </font>
                         </Label>
                         <Line endX="513.066650390625" endY="-7.62939453125E-6" layoutX="140.0" layoutY="80.0" startX="-100.0" stroke="#a05e07" strokeMiterLimit="100.0" />
-                        <ImageView fitHeight="179.0" fitWidth="238.0" layoutX="240.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageView" fitHeight="179.0" fitWidth="238.0" layoutX="240.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@image/profile.jpg" />
                            </image>
                         </ImageView>
-                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="382.0" layoutY="261.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="15.0" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-border-color: ffffff; -fx-border-width: 2; -fx-border-radius: 10;" text="+" textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="382.0" layoutY="261.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="15.0" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-border-color: ffffff; -fx-border-width: 2; -fx-border-radius: 10;" text="+" textAlignment="CENTER" textFill="WHITE" onAction="#handleAddImageButton">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -205,7 +203,7 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" onKeyReleased="#handleKeyBookISBN" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <TextField fx:id="bookTypeTextField" layoutX="380.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <Label layoutX="50.0" layoutY="805.0" text="รายละเอียดสินค้า">
                            <font>
@@ -222,7 +220,7 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPageTextField" layoutX="380.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookPageTextField" layoutX="380.0" layoutY="550.0" onKeyReleased="#handleKeyBookPage" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <Button fx:id="goToSellerStockButton" layoutX="375.0" layoutY="905.0" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าทั้งหมด" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
@@ -245,8 +243,8 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="leastStockTextField" layoutX="380.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="645.0" onKeyReleased="#handleKeyBookStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="leastStockTextField" layoutX="380.0" layoutY="645.0" onKeyReleased="#handleKeyLeastStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <Label layoutX="50.0" layoutY="710.0" text="สถานะหนังสือ">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
