--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -143,15 +143,23 @@
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <HBox fx:id="hBoxSellerStock" layoutX="2.0" prefHeight="69.0" prefWidth="1024.0">
+      <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0">
          <children>
-            <MenuButton mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+            <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/javapai.png" />
+               </image>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </ImageView>
+            <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
                <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleMagazineBookButton" text="นิตยสาร" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleNovelBookButton" text="นิยาย" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleEducationalBookButton" text="หนังสือเรียน" />
-                  <MenuItem mnemonicParsing="false" onAction="#handleEBookButton" text="e-book" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
                </items>
                <font>
                   <Font name="JasmineUPC" size="25.0" />
@@ -172,18 +180,18 @@
                <font>
                   <Font name="JasmineUPC" size="25.0" />
                </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
                <HBox.margin>
                   <Insets left="55.0" right="40.0" top="13.0" />
                </HBox.margin>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </Button>
             <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/heart.png" />
+                        <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/heart.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -195,7 +203,7 @@
                <graphic>
                   <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/basket.png" />
+                        <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/basket.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -208,7 +216,7 @@
                   <Font name="JasmineUPC" size="24.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" right="20.0" top="13.0" />
+                  <Insets left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </TextField>
          </children>
