--- a/src/main/resources/ku/cs/headPage.fxml
+++ b/src/main/resources/ku/cs/headPage.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="69.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HeadController">
+<AnchorPane prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HeadController">
    <children>
       <HBox fx:id="hBoxHeadPage" layoutX="20.0" layoutY="20.0" prefHeight="69.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -21,7 +22,7 @@
                <graphic>
                   <ImageView fitHeight="59.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@image/javapai.png" />
+                        <Image url="@image/logoverWhite.png" />
                      </image>
                   </ImageView>
                </graphic>
@@ -49,7 +50,7 @@
                   <Insets left="30.0" right="-20.0" top="13.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="status" mnemonicParsing="false" prefHeight="46.0" prefWidth="123.0" style="-fx-background-radius: 20;" text="Status" textFill="WHITE">
+            <Button fx:id="status" mnemonicParsing="false" prefHeight="46.0" prefWidth="91.0" style="-fx-background-radius: 20;" text="Status" textFill="WHITE">
                <font>
                   <Font name="JasmineUPC" size="25.0" />
                </font>
@@ -57,18 +58,18 @@
                   <Insets />
                </opaqueInsets>
                <HBox.margin>
-                  <Insets left="200.0" top="10.0" />
+                  <Insets left="220.0" top="10.0" />
                </HBox.margin>
                <stylesheets>
                   <URL value="@style/style.css" />
                   <URL value="@style/PrimaryTheme.css" />
                </stylesheets>
                <styleClass>
-                  <String fx:value="font_rsu_16pt" />
-                  <String fx:value="backgroundColorStatus" />
+                  <String fx:value="font_rsu_12pt" />
+                  <String fx:value="backgroundColorLightBrownButton" />
                </styleClass>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" styleClass="font_rsu_16pt" stylesheets="@style/PrimaryTheme.css" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="46.0" prefWidth="241.0" style="-fx-background-radius: 20;" stylesheets="@style/PrimaryTheme.css" textFill="WHITE">
                <font>
                   <Font name="JasmineUPC" size="25.0" />
                </font>
@@ -79,12 +80,20 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
                <graphic>
-                  <Label fx:id="usernameInHead" alignment="CENTER" prefHeight="31.0" prefWidth="206.0" styleClass="font_rsu_16pt" stylesheets="@style/style.css" text="Username" textAlignment="CENTER" textFill="WHITE">
+                  <Label fx:id="usernameInHead" alignment="CENTER" prefHeight="31.0" prefWidth="206.0" styleClass="font_rsu_16pt" stylesheets="@style/style.css" text="Username" textFill="WHITE">
                      <graphic>
-                        <ImageView fx:id="img" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="img" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="radius">
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
+                        </ImageView>
                      </graphic>
                   </Label>
                </graphic>
+               <styleClass>
+                  <String fx:value="font_rsu_16pt" />
+                  <String fx:value="backgroundColorLightBrownButton" />
+               </styleClass>
             </Button>
          </children>
       </HBox>
