--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,83 +17,16 @@
         <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
                 <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@image/javapai.png" />
-                            </image>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </ImageView>
-                        <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
-                                <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
-                                <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
-                                <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
-                                <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
-                            </items>
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="40.0" top="13.0" />
-                            </HBox.margin>
-                        </MenuButton>
-                        <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="30.0" right="-20.0" top="13.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
-                            <font>
-                                <Font name="JasmineUPC" size="25.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="55.0" right="40.0" top="13.0" />
-                            </HBox.margin>
-                            <opaqueInsets>
-                                <Insets />
-                            </opaqueInsets>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
-                            <graphic>
-                                <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@image/heart.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <HBox.margin>
-                                <Insets top="13.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
-                            <graphic>
-                                <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@image/basket.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <HBox.margin>
-                                <Insets top="13.0" />
-                            </HBox.margin>
-                        </Button>
-                        <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
-                            <font>
-                                <Font name="JasmineUPC" size="24.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="20.0" right="20.0" top="15.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                </HBox>
+               <children>
+                  <GridPane fx:id="gridPaneInHead" prefHeight="69.0" prefWidth="1024.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </children></HBox>
             </top>
             <center>
                 <GridPane BorderPane.alignment="CENTER">
