editStock.fxml can show now detail

--- a/src/main/resources/ku/cs/stock.fxml
+++ b/src/main/resources/ku/cs/stock.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.StockController">
+<AnchorPane fx:id="anchorpaneCenter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.StockController">
    <children>
-      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="240.0" layoutX="5.0" layoutY="5.0" stroke="WHITE" strokeType="INSIDE" width="687.0" />
+      <Rectangle fx:id="rectangleCenter" arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="240.0" layoutX="5.0" layoutY="5.0" stroke="WHITE" strokeType="INSIDE" width="687.0" />
       <VBox layoutX="22.0" layoutY="34.0" prefHeight="250.0" prefWidth="173.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="525.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="bookImageView" fitHeight="193.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
@@ -93,7 +93,7 @@
             <Font name="JasmineUPC Bold" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="560.0" layoutY="188.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="แก้ไขข้อมูล" textFill="WHITE" onAction="#handleEditBookButton">
+      <Button layoutX="560.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleEditBookButton" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="แก้ไขข้อมูล" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
