--- a/src/main/resources/ku/cs/editStock.fxml
+++ b/src/main/resources/ku/cs/editStock.fxml
@@ -166,7 +166,7 @@
          <center>
             <ScrollPane prefHeight="774.0" prefWidth="698.0" BorderPane.alignment="CENTER">
                <content>
-                  <AnchorPane prefHeight="1058.0" prefWidth="690.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+                  <AnchorPane fx:id="anchorPaneCenter" prefHeight="1058.0" prefWidth="690.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                      <children>
                         <Label layoutX="40.0" layoutY="44.0" text="แก้ไขข้อมูลสินค้า" textFill="#a05e07">
                            <font>
@@ -197,8 +197,8 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookNameTextField" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-alignment: c9ad88;" />
-                        <TextField fx:id="bookAuthorTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextField fx:id="bookNameTextField" onKeyReleased="#handleKeyBookName" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-alignment: c9ad88;" />
+                        <TextField fx:id="bookAuthorTextField" onKeyReleased="#handleKeyBookAuthor" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="425.0" text="รหัส ISBN">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
@@ -209,13 +209,13 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" onKeyReleased="#handleKeyBookISBN" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextField fx:id="bookISBNTextField"  layoutX="55.0" layoutY="455.0" onKeyReleased="#handleKeyBookISBN" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="710.0" text="รายละเอียดสินค้า">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Button fx:id="addBookButton" layoutX="375.0" layoutY="800.0" mnemonicParsing="false" onAction="#handleAddBookButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไขสินค้า" textFill="WHITE">
+                        <Button fx:id="editBookButton" layoutX="375.0" layoutY="800.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไขสินค้า" textFill="WHITE" onAction="#handleEditBookButton">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -231,13 +231,13 @@
                               <Font size="20.0" />
                            </font>
                         </Button>
-                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="740.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextArea fx:id="bookDetailTextArea" onKeyReleased="#handleKeyBookDetail" layoutX="55.0" layoutY="740.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="520.0" text="สำนักพิมพ์">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPublisherTextField" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextField fx:id="bookPublisherTextField" onKeyReleased="#handleKeyBookPublisher" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="615.0" text="จำนวนสินค้าในคลัง">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
@@ -255,7 +255,7 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextField fx:id="bookPriceTextField" onKeyReleased="#handleKeyBookPrice" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label fx:id="NotificationBookISBN" layoutX="55.0" layoutY="495.0" textFill="#f20505">
                            <font>
                               <Font name="JasmineUPC" size="12.0" />
